--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^=4.2.1",
     "cookie-parser": "^1.3.5",
     "debug": "^4.1.0",
     "express": "^4.13.4",
