--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "shopping-cart",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "^1.13.3",
-    "bootstrap": "^=4.2.1",
-    "cookie-parser": "^1.3.5",
-    "debug": "^4.1.0",
-    "express": "^4.13.4",
-    "express-handlebars": "^3.0.0",
-    "fresh": "^0.5.2",
-    "hbs": "~3.1.0",
-    "mime": "^2.3.1",
-    "morgan": "^1.6.1",
-    "negotiator": "^0.6.1",
-    "node": "^10.12.0",
-    "popper": "^1.0.1",
-    "serve-favicon": "^2.3.2",
-    "stripe": "^6.23.0"
-  }
+    "name": "shopping-cart",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "^1.13.3",
+        "bootstrap": ">=4.2.1",
+        "cookie-parser": "^1.3.5",
+        "debug": "^4.1.0",
+        "express": "^4.13.4",
+        "express-handlebars": "^3.0.0",
+        "fresh": "^0.5.2",
+        "hbs": "~3.1.0",
+        "mime": "^2.3.1",
+        "morgan": "^1.6.1",
+        "negotiator": "^0.6.1",
+        "node": "^10.12.0",
+        "popper": "^1.0.1",
+        "serve-favicon": "^2.3.2",
+        "stripe": "^6.23.0"
+    }
 }
