--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "node": "^10.12.0",
         "popper": "^1.0.1",
         "serve-favicon": "^2.3.2",
-        "stripe": "^6.23.0"
+        "stripe": "^6.23.0",
+        "event-stream": "<=3.3.4"
     }
 }
