--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
         "popper": "^1.0.1",
         "serve-favicon": "^2.3.2",
         "stripe": "^6.23.0",
-        "event-stream": "<=3.3.4"
+        "event-stream": "=3.3.4"
     }
 }
